# eloquent-ai-backend

./: .env.example  README.md  chat.db  main.py  pyproject.toml
src/constants/: prompts.py  role.py
src/controllers/: auth.py  conversation.py  conversation_controller.py  user_controller.py
src/helpers/: database.py  filter_message.py  guardrails.py  jwt.py  openai.py  pinecone.py  response.py
src/models/: auth.py  chat.py  message.py
src/routers/: auth.py  chat.py  user.py
src/sql_models/: conversation.py  message.py  user.py
