[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "json-repair>=0.49.0",
    "openai>=1.99.9",
    "pinecone>=7.3.0",
    "pydantic>=2.11.7",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
